2006-09-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* test/persistence.scm: Add
	  tests for removing object.

	* src/kahua/persistence.scm, src/kahua/persistence/*.scm: Add
	  Removed flag and remove-kahua-instance added.
	  Now make-kahua-collection excludes object that have #t as
	  removed flag, and find-kahua-instance return #f if it find
	  removed object.

2006-09-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence.scm: Change
	  Now kahua-check-transaction! deprecated.

	* src/kahua-server.scm, src/kahua/persistence.scm,
	  src/kahua/persistence/*.scm: Change
	  Split with-db into with-kahua-db-connection and
	  with-kahua-db-transaction.  Now worker process connects to
	  database at its start up time, and does a transaction per
	  request.

2006-09-09  Katsutoshi Itoh  <cut-sea@kahua.org>

	* replace skel/proj/base.kahua
	  to skel/proj/auto-update-base.kahua and skel/proj/slot-acl-base.kahua.
	* <auto-update-base> and <slot-acl-base> is prototype
	  of MOP base class collection.
	
2006-09-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.6 released.

	* README: Added

2006-09-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* INSTALL: Merge "Let's just try Kahua".

	* cgi/kahua.cgi.in: Fix a bug.
	  If SERVER_NAME has port number, Location header value was
	  irregular URI: http://hostname:port:port/path/path/path...
	  Apache http server doesn't give port number to SERVER_NAME,
	  but lighttpd does.

	* src/kahua/persistence.scm, src/kahua/persistence/*.scm:
	  Now lock tables in kahua-db-sync, not in each write-kahua-instance.

2006-09-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	  src/kahua-httpd.scm, src/kahua-spvr.scm, cgi/kahua.cgi.in: Arrange

2006-08-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* cgi/kahua.cgi.in: Now its configuration follow kahua.config.

	* src/kahua/config.scm.in: Add kaha-tmpbase for temporary file base.
